--- a/requirements.yml
+++ b/requirements.yml
@@ -7,12 +7,14 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - asttokens=3.0.0=pyhd8ed1ab_1
   - blas=1.0=mkl
   - brotli-python=1.0.9=py312h6a678d5_8
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2024.8.30=hbcca054_0
-  - certifi=2024.8.30=pyhd8ed1ab_0
+  - ca-certificates=2025.1.31=hbcca054_0
+  - certifi=2025.1.31=pyhd8ed1ab_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - comm=0.2.2=pyhd8ed1ab_1
   - cuda-cudart=12.1.105=0
   - cuda-cupti=12.1.105=0
   - cuda-libraries=12.1.0=0
@@ -21,6 +23,10 @@ dependencies:
   - cuda-opencl=12.5.39=0
   - cuda-runtime=12.1.0=0
   - cuda-version=12.5=3
+  - debugpy=1.8.11=py312h6a678d5_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_1
+  - executing=2.1.0=pyhd8ed1ab_1
   - expat=2.6.2=h6a678d5_0
   - ffmpeg=4.3=hf484d3e_0
   - filelock=3.13.1=py312h06a4308_0
@@ -28,9 +34,16 @@ dependencies:
   - gmp=6.2.1=h295c915_3
   - gnutls=3.6.15=he1e5248_0
   - idna=3.7=py312h06a4308_0
+  - importlib-metadata=8.6.1=pyha770c72_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=9.0.0=pyhfb0248b_0
+  - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
+  - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.4=py312h06a4308_0
   - jpeg=9e=h5eee18b_1
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_core=5.7.2=pyh31011fe_1
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
@@ -52,6 +65,7 @@ dependencies:
   - libnvjitlink=12.1.105=0
   - libnvjpeg=12.1.1.14=0
   - libpng=1.6.39=h5eee18b_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtasn1=4.19.0=h5eee18b_0
   - libtiff=4.5.1=h6a678d5_0
@@ -61,12 +75,14 @@ dependencies:
   - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_1
   - markupsafe=2.1.3=py312h5eee18b_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
   - mkl=2023.1.0=h213fc3f_46344
   - mkl-service=2.4.0=py312h5eee18b_1
   - mkl_fft=1.3.8=py312h5eee18b_0
   - mkl_random=1.2.4=py312hdb19cb5_0
   - mpmath=1.3.0=py312h06a4308_0
   - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
   - nettle=3.7.3=hbbd107a_1
   - networkx=3.1=py312h06a4308_0
   - numpy=1.26.4=py312hc5e2394_0
@@ -74,29 +90,46 @@ dependencies:
   - openh264=2.1.1=h4ff587b_0
   - openjpeg=2.4.0=h3ad879b_0
   - openssl=3.0.15=h5eee18b_0
+  - parso=0.8.4=pyhd8ed1ab_1
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py312h5eee18b_0
   - pip=24.0=py312h06a4308_0
+  - platformdirs=4.3.6=pyhd8ed1ab_1
+  - prompt-toolkit=3.0.50=pyha770c72_0
+  - psutil=5.9.0=py312h5eee18b_1
+  - ptyprocess=0.7.0=pyhd8ed1ab_1
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pygments=2.19.1=pyhd8ed1ab_0
   - pysocks=1.7.1=py312h06a4308_0
   - python=3.12.3=h996f2a0_1
+  - python-dateutil=2.9.0.post0=pyhff2d567_1
   - pytorch=2.3.0=py3.12_cuda12.1_cudnn8.9.2_0
   - pytorch-cuda=12.1=ha16c6d3_5
   - pytorch-mutex=1.0=cuda
   - pyyaml=6.0.1=py312h5eee18b_0
+  - pyzmq=26.2.0=py312h6a678d5_0
   - readline=8.2=h5eee18b_0
   - requests=2.32.2=py312h06a4308_0
   - setuptools=69.5.1=py312h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
+  - stack_data=0.6.3=pyhd8ed1ab_1
   - sympy=1.12=py312h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.14=h39e8969_0
   - torchaudio=2.3.0=py312_cu121
   - torchinfo=1.8.0=pyhd8ed1ab_0
   - torchvision=0.18.0=py312_cu121
+  - tornado=6.4.2=py312h5eee18b_0
+  - traitlets=5.14.3=pyhd8ed1ab_1
   - typing_extensions=4.11.0=py312h06a4308_0
   - urllib3=2.2.1=py312h06a4308_0
+  - wcwidth=0.2.13=pyhd8ed1ab_1
   - wheel=0.43.0=py312h06a4308_0
   - xz=5.4.6=h5eee18b_1
   - yaml=0.2.5=h7b6447c_0
+  - zeromq=4.3.5=h6a678d5_0
+  - zipp=3.21.0=pyhd8ed1ab_1
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.5=hc292b87_2
   - pip:
@@ -112,10 +145,8 @@ dependencies:
       - pandas==2.2.2
       - protobuf==5.27.0
       - pyparsing==3.1.2
-      - python-dateutil==2.9.0.post0
       - pytz==2024.1
       - scipy==1.13.1
       - six==1.16.0
       - tensorboardx==2.6.2.2
       - tzdata==2024.1
-prefix: /home/sposhiya/.conda/envs/pytorch
