--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,8 @@
-name: pytorch
+name: worm
 channels:
   - defaults
 dependencies:
+  - python=3.10.0
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h5eee18b_6
@@ -95,4 +96,3 @@ dependencies:
       - typing-extensions==4.12.2
       - urllib3==2.4.0
       - yarl==1.20.0
-prefix: /home/sposhiya/.conda/envs/pytorch
